# frontend-mess

./: .gitignore  README.md  pixi.toml  pyproject.toml
.github/workflows/: test.yml
examples/: nnmodule.py  torchvision_resnet.py  transformers_berttiny.py  transformers_tinystories.py  transformers_whispersmall.py
examples/examples/: torchvision.py
frontend-mess/: torch_mlir_import.py
frontend-mess/.github/workflows/: test.yml
frontend_mess/: torch_mlir_import.py
frontend_mess/analyses/: __init__.py  analysis.py  count_generics.py  iterator_first.py  linalg_analysis.py
frontend_mess/postprocess/: torch.py
frontend_mess/tools/: mess_analysis.py
frontend_mess/utils/: printing.py
tests/filecheck/: .lit_test_times.txt  lit.cfg
tests/filecheck/analyses/: count_generics.mlir
tests/filecheck/examples/: nnmodule.txt  overview_berttiny.txt  overview_resnet.txt  overview_tinystories.txt  overview_whispersmall.txt
